fixed map visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -246,6 +246,7 @@ select::-ms-expand {
 }
 
 #map {
+  display: none;
   height: 300px;
   width: 100%;
   margin-bottom: 30px;
